# clearcote-browser

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  CREDITS.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.sh  llms.txt
.github/workflows/: docker.yml  mcp.yml  npm.yml  nuget.yml  patch-integrity.yml  pypi.yml  sdk-ci.yml  stealth-coherence.yml
assets/fonts/: ATTRIBUTION.md  fonts.conf.template
config/: args.gn  args.linux.gn
docker/: Dockerfile  README.md  serve.py
docs/: BUILDING.md  CANVAS-BRIDGE.md  PATCH-INTEGRITY.md  PATCHES.md  RELEASE-SMOKE-TEST.md  RELEASING-SDK.md  RELEASING.md  RESEARCH-DOSSIER.md  RESEARCH.md  STEALTH-COHERENCE.md  UPGRADING.md  VERIFY.md
mcp/: USAGE.md  pyproject.toml
mcp/clearcote_mcp/: __init__.py  _facade.py  server.py
mcp/npm/: README.md  cli.js  package.json
mcp/tests/: test_server.py
patches/: 000-fingerprint-switches.patch  001-farble-seed-core.patch  002-persona-profile.patch  002-user-agent-fingerprint.patch  003-audio-fingerprint-2.patch  003-audio-fingerprint.patch  005-hardware-concurrency-fingerprint.patch  007-shadow-root.patch  010-headless.patch  010-user-agent-and-webdriver.patch  011-gpu-info.patch  012-canvas-get-image-data.patch  013-canvas-toDataURL.patch  014-client-rects.patch  018-timezone.patch  020-audio.patch  030-hardware-concurrency.patch  040-fonts.patch  050-shadow-dom.patch  060-canvas.patch  065-canvas-bridge.patch  070-webgl-gpu.patch  075-webgpu-coherence.patch  080-client-rects.patch  090-windows-cross-build-fixes.patch  092-language-locale-coherence.patch  100-webrtc-leak.patch  110-runtime-enable.patch  130-humanized-input.patch  140-screen.patch  141-media-queries.patch  145-storage-quota.patch  146-perf-memory.patch  147-media-capabilities.patch  148-media-devices.patch  150-device-sensors.patch  160-coherence-misc.patch  170-speech-voices.patch  180-geolocation.patch  200-agent-and-humanized-input.patch  (+7 more)
scripts/: 00-fetch-source.sh  01-apply-patches.sh  02-host-toolchain.sh  03-windows-sdk.sh  04-configure-build.sh  05-package.sh  check_release_pin.py  creepjs_audit.py  fetch_release_binary.py  patch_markers.json  rebuild.sh  stealth_coherence.py  verify_patches.py
sdk/dotnet/: .gitignore  Clearcote.sln  PUBLISHING.md
sdk/dotnet/src/Clearcote/: Clearcote.cs  Clearcote.csproj  Download.cs  Fingerprint.cs  Humanize.cs  LaunchOptions.cs  LaunchOpts.cs  License.cs  Motion.cs  Native.cs  README.md  Release.cs  WinLaunch.cs
sdk/dotnet/tests/Clearcote.Tests/: Clearcote.Tests.csproj  FingerprintTests.cs  LaunchOptsTests.cs  LicenseReuseTests.cs  LicenseTests.cs  MotionTests.cs  ProRevisionTests.cs  ReleaseTests.cs  SdkVersionTests.cs  TestHelpers.cs  VersionTests.cs  WinLaunchTests.cs
sdk/node/: README.md  package-lock.json  package.json  tsconfig.json
sdk/node/src/: agent.ts  cli.ts  download.ts  fingerprint.ts  fonts.ts  geoip.ts  humanize.ts  index.ts  launchopts.ts  license.ts  motion.ts  motionscore.ts  profile.ts  release.ts  render.ts  warnings.ts  widevine.ts
sdk/node/test/: agent.test.ts  fingerprint.test.ts  fonts.test.ts  geoip.test.ts  humanize.test.ts  launchopts.test.ts  license-reuse.test.ts  license.test.ts  motion.test.ts  pro-revision.test.ts  profile.test.ts  release.test.ts  render.test.ts  serve.test.ts  versions.test.ts  warnings.test.ts  widevine.test.ts  win-launch.test.ts
sdk/python/: .gitignore  LICENSE  README.md  pyproject.toml
sdk/python/clearcote/: __init__.py  _agent.py  _fingerprint.py  _fonts.py  _humanize.py  _humanize_async.py  _launchopts.py  _license.py  _motion.py  _motionscore.py  _profile.py  _render.py  _render_async.py  _serve.py  _warnings.py  _widevine.py  async_api.py  cli.py  download.py  geoip.py  release.py
sdk/python/tests/: test_agent.py  test_async_api.py  test_fingerprint.py  test_fonts.py  test_geoip.py  test_humanize.py  test_launch_smoke.py  test_launchopts.py  test_license.py  test_license_reuse.py  test_motion.py  test_profile.py  test_release.py  test_render.py  test_serve.py  test_versions.py  test_warnings.py  test_widevine.py  test_win_launch.py
sdk/scripts/: smoke-release.sh  smoke_launch.mjs  smoke_launch.py
tools/canvas-bridge-server/: README.md  server.py
tools/fingerprint-collect/: README.md  collect.html  collect.js  convert_dataset.py  pyproject.toml  snippet.js  verify_profile.py
