# Clearcote reference build configuration — Windows x64, cross-compiled on Linux.
#
# This is the effective build configuration used to produce the published pre-release
# (same flags and values as the build host's out/Default/args.gn; only ordering/comments
# differ, which gn ignores). Copy it verbatim into the build:
#   cp config/args.gn <chromium-src>/out/Default/args.gn
# then `gn gen out/Default && ninja -C out/Default chrome`. (scripts/04-configure-build.sh
# does this for you.) Everything here is plain and inspectable — no hidden flags.

# --- De-Google (from ungoogled-chromium's flags.gn; kept explicit so this file is self-contained) ---
clang_use_chrome_plugins = false
disable_fieldtrial_testing_config = true
enable_hangout_services_extension = false
enable_mdns = false
enable_remoting = false
enable_reporting = false
enable_service_discovery = false
# Widevine EME *plumbing* only — clearcote does NOT bundle Google's proprietary CDM blob; the SDK
# fetches it opt-in at runtime (see sdk/python/clearcote/_widevine.py). This makes
# requestMediaKeySystemAccess('com.widevine.alpha') resolvable instead of a no-Widevine tell.
enable_widevine = true
exclude_unwind_tables = true
google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
safe_browsing_mode = 0
use_official_google_api_keys = false
use_unofficial_version_number = false

# --- Target + toolchain ---
target_os = "win"
target_cpu = "x64"
is_clang = true
clang_base_path = "//third_party/llvm-build/Release+Asserts"
rust_sysroot_absolute = ""            # build rust std from source (no prebuilt absolute sysroot)

# --- Release configuration ---
is_debug = false
is_official_build = false             # NOTE: the published pre-release was built non-official.
                                      # Flip to true for a production/stealth-grade build, but
                                      # then config + shipped binary must match (see docs/RELEASING.md).
                                      # NOTE: a non-official build defaults dcheck_always_on to
                                      # !is_official_build = true, so upstream DCHECKs are FATAL and
                                      # can crash the tab under CDP on edge inputs. The fix is to set
                                      # dcheck_always_on=false, but that is a full rebuild — stage it
                                      # with the next from-scratch/official build, NOT an incremental
                                      # one, so this published config keeps matching the shipped binary.
is_component_build = false            # single, shippable binary
symbol_level = 0
blink_symbol_level = 0
chrome_pgo_phase = 0                  # no downloaded PGO profiles
use_remoteexec = false

# --- Media / codecs (match a normal desktop browser) ---
proprietary_codecs = true
ffmpeg_branding = "Chrome"

# --- Cross-build hygiene ---
enable_nacl = false
dawn_use_built_dxc = false
treat_warnings_as_errors = false
fatal_linker_warnings = false
v8_drumbrake_bounds_checks = true
